--- a/src/styles/pages/members.scss
+++ b/src/styles/pages/members.scss
@@ -2,9 +2,13 @@ main#profile {
     --pfp-size: 128px;
     flex: 1;
     width: 100%; 
-    border-radius: 0 !important;
-    justify-content: left !important;
-  
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    
     & > section {
         max-width: 500px;
         margin: 25px;
