--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -230,7 +230,7 @@ main {
 }
 
 section {
-  &:not(#portal, .split) {
+  &:not(#portal, .split, .profile &) {
     display: flex;
     justify-content: center;
     align-items: center;
