--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,7 +7,7 @@ import '../styles/pages/index.scss'
 import '../styles/photos.scss'
 ---
 <Layout title="Projects">
-  <main id="content">
+  <main id="content" class="projects">
     <section class="split">
       <section>
         <h1>Amphibian Foundation</h1>
