create and use projects.scss

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Hero from '../components/hero.astro'
 import Carousel from '../components/carousel.astro'
 
-import '../styles/pages/index.scss'
+import '../styles/pages/projects.scss'
 import '../styles/photos.scss'
 ---
 <Layout title="Projects">
