--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,15 +7,12 @@ footer {
     width: 100%;
     height: 50px;
   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
     box-shadow: 0px 0px 10px 0px white;
   
     & > span {
-        display: flex;
-        align-items: center;
+        position: absolute;
+        inset: 0;
+        margin-inline: auto;
     }
 }
   
