--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -11,8 +11,9 @@ footer {
   
     & > span {
         position: absolute;
-        inset: 0;
-        margin-inline: auto;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
     }
 }
   
