--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -14,6 +14,10 @@ footer {
         top: 50%;
         left: 50%;
         translate: -50% -50%;
+
+        *, & {
+            line-height: 1;
+        }
     }
 }
   
