--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,32 +11,52 @@ import '../styles/photos.scss'
     <Split>
       <section>
         <h1>Amphibian Foundation</h1>
-        <div>
-          Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.
-        </div>
+        <!-- <div class="tiny-split"> -->
+          <div>
+            Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.
+          </div>
+          <!-- <div>
+
+          </div> -->
+        <!-- </div> -->
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Treasure Chest Foundation</h1>
-        <div>
-          They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.
-        </div>
+        <!-- <div class="tiny-split"> -->
+          <div>
+            They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.
+          </div>
+          <!-- <div>
+
+          </div> -->
+        <!-- </div> -->
       </section>
     </Split>
     <div hHr></div>
     <Split>
       <section>
         <h1>S.A.V.E Foundation</h1>
-        <div>
-          Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.
-        </div>
+        <!-- <div class="tiny-split"> -->
+          <div>
+            Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.
+          </div>
+          <!-- <div>
+
+          </div> -->
+        <!-- </div> -->
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Vanni Aid</h1>
-        <div>
-          We are currently working with Vanni Aid to re-do their website! Adarsh and one other peoson are working on this .
-        </div>
+        <!-- <div class="tiny-split"> -->
+          <div>
+            We are currently working with Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.
+          </div>
+          <!-- <div>
+
+          </div> -->
+        <!-- </div> -->
       </section>
     </Split>
     <div hHr></div>
@@ -44,15 +64,25 @@ import '../styles/photos.scss'
       <span class="vHr"></span>
       <section>
         <h1>CORA</h1>
-        <div>
-          Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
-        </div>
+        <!-- <div class="tiny-split"> -->
+          <div>
+            Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
+          </div>
+          <!-- <div>
+
+          </div> -->
+        <!-- </div> -->
       </section>
       <span class="vHr"></span>
       <!-- <section>
         <h1>Project Title</h1>
-        <div>
-          things things
+        <div class="tiny-split">
+          <div>
+            things things
+          </div>
+          <div>
+
+          </div>
         </div>
       </section> -->
     </Split>
@@ -60,15 +90,25 @@ import '../styles/photos.scss'
     <!-- <Split>
       <section>
         <h1>Project Title</h1>
-        <div>
-          things things
+        <div class="tiny-split">
+          <div>
+            things things
+          </div>
+          <div>
+
+          </div>
         </div>
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Project Title</h1>
-        <div>
-          things things
+        <div class="tiny-split">
+          <div>
+            things things
+          </div>
+          <div>
+
+          </div>
         </div>
       </section>
     </Split> -->
