--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Split from '../components/split.astro'
+import TinySplit from '../components/tinySplit.astro'
 import Carousel from '../components/carousel.astro'
 
 import '../styles/pages/projects.scss'
@@ -11,52 +12,52 @@ import '../styles/photos.scss'
     <Split>
       <section>
         <h1>Amphibian Foundation</h1>
-        <!-- <div class="tiny-split"> -->
+        <!-- <TinySplit> -->
           <div>
             Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.
           </div>
           <!-- <div>
 
           </div> -->
-        <!-- </div> -->
+        <!-- </TinySplit> -->
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Treasure Chest Foundation</h1>
-        <!-- <div class="tiny-split"> -->
+        <!-- <TinySplit> -->
           <div>
             They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.
           </div>
           <!-- <div>
 
           </div> -->
-        <!-- </div> -->
+        <!-- </TinySplit> -->
       </section>
     </Split>
     <div hHr></div>
     <Split>
       <section>
         <h1>S.A.V.E Foundation</h1>
-        <!-- <div class="tiny-split"> -->
+        <!-- <TinySplit> -->
           <div>
             Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.
           </div>
           <!-- <div>
 
           </div> -->
-        <!-- </div> -->
+        <!-- </TinySplit> -->
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Vanni Aid</h1>
-        <!-- <div class="tiny-split"> -->
+        <!-- <TinySplit> -->
           <div>
             We are currently working with Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.
           </div>
           <!-- <div>
 
           </div> -->
-        <!-- </div> -->
+        <!-- </TinySplit> -->
       </section>
     </Split>
     <div hHr></div>
@@ -64,52 +65,52 @@ import '../styles/photos.scss'
       <span class="vHr"></span>
       <section>
         <h1>CORA</h1>
-        <!-- <div class="tiny-split"> -->
+        <!-- <TinySplit> -->
           <div>
             Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
           </div>
           <!-- <div>
 
           </div> -->
-        <!-- </div> -->
+        <!-- </TinySplit> -->
       </section>
       <span class="vHr"></span>
       <!-- <section>
         <h1>Project Title</h1>
-        <div class="tiny-split">
+        <TinySplit>
           <div>
             things things
           </div>
           <div>
 
           </div>
-        </div>
+        </TinySplit>
       </section> -->
     </Split>
     <div hHr></div>
     <!-- <Split>
       <section>
         <h1>Project Title</h1>
-        <div class="tiny-split">
+        <TinySplit>
           <div>
             things things
           </div>
           <div>
 
           </div>
-        </div>
+        </TinySplit>
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Project Title</h1>
-        <div class="tiny-split">
+        <TinySplit>
           <div>
             things things
           </div>
           <div>
 
           </div>
-        </div>
+        </TinySplit>
       </section>
     </Split> -->
   </main>
