--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import '../styles/photos.scss'
         <h2>Empowering Non-Profits Through the Power of Design!</h1>
       </div>
     </Hero>
-    <Splir idName="mission">
+    <Split idName="mission">
       <section id="mSection">
         <h1>Our Mission</h1>
         <div class="missiontext">
