--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -77,6 +77,7 @@ section.split.tiny {
     --padding: 25px;
   
     width: 100%;
+    min-height: 100%;
     
     display: grid;
     grid-template-columns: 1fr 1fr;
