--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -76,8 +76,8 @@ section.split:not(.tiny) {
 section.split.tiny {
     --padding: 25px;
   
+    flex: 1;
     width: 100%;
-    min-height: 100%;
     
     display: grid;
     grid-template-columns: 1fr 1fr;
