--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -45,7 +45,7 @@ section.split:not(.tiny) {
             width: 100%;
         }
     
-        & h1 {
+        & :is(h1, h2, h3, h4, h5, h6) {
             text-align: center;
         }
         
@@ -90,25 +90,12 @@ section.split.tiny {
         align-items: center;
         gap: calc(var(--padding)/2);
         
-        &:first-child {
-            margin-inline-start: var(--padding);
-        }
-        &:last-child {
-            margin-inline-end: var(--padding);
-        }
-        
-        &#contact {
-            & h2 {
-                margin-block: 0;
-            }
-        }
-        
         & > div:not([hHr]) {
             min-height: calc(50% - 50px);
             width: 100%;
         }
     
-        & h1 {
+        & :is(h1, h2, h3, h4, h5, h6) {
             text-align: center;
         }
         
