--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -14,7 +14,7 @@ import '../styles/photos.scss'
         <h1>Amphibian Foundation</h1>
         <TinySplit>
           <div>
-            Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.
+            <p>Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.</p>
           </div>
           <!-- <div>
 
@@ -26,7 +26,7 @@ import '../styles/photos.scss'
         <h1>Treasure Chest Foundation</h1>
         <TinySplit>
           <div>
-            They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.
+            <p>They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.</p>
           </div>
           <!-- <div>
 
@@ -40,7 +40,7 @@ import '../styles/photos.scss'
         <h1>S.A.V.E Foundation</h1>
         <TinySplit>
           <div>
-            Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.
+            <p>Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.</p>
           </div>
           <!-- <div>
 
@@ -52,7 +52,7 @@ import '../styles/photos.scss'
         <h1>Vanni Aid</h1>
         <TinySplit>
           <div>
-            We are currently working with Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.
+            <p>We are currently working with Anita from Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.</p>
           </div>
           <!-- <div>
 
@@ -67,7 +67,7 @@ import '../styles/photos.scss'
         <h1>CORA</h1>
         <TinySplit>
           <div>
-            Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
+            <p>Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. </p>
           </div>
           <!-- <div>
 
@@ -79,7 +79,7 @@ import '../styles/photos.scss'
         <h1>Project Title</h1>
         <TinySplit>
           <div>
-            things things
+            <p>things things</p>
           </div>
           <div>
 
@@ -93,7 +93,7 @@ import '../styles/photos.scss'
         <h1>Project Title</h1>
         <TinySplit>
           <div>
-            things things
+            <p>things things</p>
           </div>
           <div>
 
@@ -105,7 +105,7 @@ import '../styles/photos.scss'
         <h1>Project Title</h1>
         <TinySplit>
           <div>
-            things things
+            <p>things things</p>
           </div>
           <div>
 
