--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -90,11 +90,12 @@ section.split.tiny {
         align-items: center;
         gap: calc(var(--padding)/2);
         
-        & > div:not([hHr]) {
-            min-height: calc(50% - 50px);
-            width: 100%;
+        & p {
+            margin-block: 0;
+            text-align: center;
+            text-wrap: balance;
         }
-    
+
         & :is(h1, h2, h3, h4, h5, h6) {
             text-align: center;
         }
