--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -16,9 +16,9 @@ import '../styles/photos.scss'
           <div>
             <p>Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.</p>
           </div>
-          <!-- <div>
+          <div class="img-parent">
 
-          </div> -->
+          </div>
         </TinySplit>
       </section>
       <span class="vHr"></span>
@@ -42,7 +42,7 @@ import '../styles/photos.scss'
           <div>
             <p>Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.</p>
           </div>
-          <!-- <div>
+          <!-- <div class="img-parent">
 
           </div> -->
         </TinySplit>
@@ -54,7 +54,7 @@ import '../styles/photos.scss'
           <div>
             <p>We are currently working with Anita from Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.</p>
           </div>
-          <!-- <div>
+          <!-- <div class="img-parent">
 
           </div> -->
         </TinySplit>
@@ -69,7 +69,7 @@ import '../styles/photos.scss'
           <div>
             <p>Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. </p>
           </div>
-          <!-- <div>
+          <!-- <div class="img-parent">
 
           </div> -->
         </TinySplit>
@@ -81,7 +81,7 @@ import '../styles/photos.scss'
           <div>
             <p>things things</p>
           </div>
-          <div>
+          <div class="img-parent">
 
           </div>
         </TinySplit>
@@ -95,7 +95,7 @@ import '../styles/photos.scss'
           <div>
             <p>things things</p>
           </div>
-          <div>
+          <div class="img-parent">
 
           </div>
         </TinySplit>
@@ -107,7 +107,7 @@ import '../styles/photos.scss'
           <div>
             <p>things things</p>
           </div>
-          <div>
+          <div class="img-parent">
 
           </div>
         </TinySplit>
