--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -85,10 +85,24 @@ section.split.tiny {
     gap: calc(var(--padding)/2);
     
     & > div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: calc(var(--padding)/2);
+        &:not(.img-parent) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: calc(var(--padding)/2);
+        }
+
+        .img-parent {
+            position: relative;
+
+            img {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                translate: -50% -50%;
+                object-fit: cover;
+            }
+        }
         
         & p {
             margin-block: 0;
