--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,7 +17,7 @@ import '../styles/photos.scss'
             <p>Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.</p>
           </div>
           <div class="img-parent">
-
+            <img src="/assets/projects/amphibian-foundation.png" alt="The Amphibian Foundation Image" />
           </div>
         </TinySplit>
       </section>
@@ -28,9 +28,9 @@ import '../styles/photos.scss'
           <div>
             <p>They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.</p>
           </div>
-          <!-- <div>
-
-          </div> -->
+          <div>
+            <img src="/assets/projects/treasurechest-foundation.png" alt="The Treasure Chest Foundation Image" />
+          </div>
         </TinySplit>
       </section>
     </Split>
