--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -42,9 +42,9 @@ import '../styles/photos.scss'
           <div>
             <p>Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.</p>
           </div>
-          <!-- <div class="img-parent">
-
-          </div> -->
+          <div class="img-parent">
+            <img src="/assets/projects/save-foundation.svg" alt="The Save Foundation Image" />
+          </div>
         </TinySplit>
       </section>
       <span class="vHr"></span>
@@ -54,9 +54,9 @@ import '../styles/photos.scss'
           <div>
             <p>We are currently working with Anita from Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.</p>
           </div>
-          <!-- <div class="img-parent">
-
-          </div> -->
+          <div class="img-parent">
+            <img src="/assets/projects/vanniaid-foundation.png" alt="The Vanni Aid Image" />
+          </div>
         </TinySplit>
       </section>
     </Split>
@@ -69,9 +69,9 @@ import '../styles/photos.scss'
           <div>
             <p>Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. </p>
           </div>
-          <!-- <div class="img-parent">
-
-          </div> -->
+          <div class="img-parent">
+            <img src="/assets/projects/cora-foundation.png" alt="The CORA Image" />
+          </div>
         </TinySplit>
       </section>
       <span class="vHr"></span>
