--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -101,7 +101,7 @@ section.split.tiny {
                 left: 50%;
                 translate: -50% -50%;
                 max-width: 100%;
-                height: auto;
+                max-height: 100%;
             }
         }
         
