--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -46,7 +46,7 @@ else if (finalDateS[2].endsWith('3') && finalDateS[2] !== '13') {
 else {
   finalDateS[2] = `${finalDateS[2]}th`
 }
-finalDate = `${finalDateS[0]} ${finalDateS[1]} ${finalDateS[2]} ${finalDateS[3]}`
+finalDate = `${finalDateS[0]}, ${finalDateS[1]} ${finalDateS[2]}, ${finalDateS[3]}`
 
 ---
 <footer>
