--- a/src/styles/split.scss
+++ b/src/styles/split.scss
@@ -92,7 +92,7 @@ section.split.tiny {
             gap: calc(var(--padding)/2);
         }
 
-        .img-parent {
+        &.img-parent {
             position: relative;
 
             img {
@@ -105,7 +105,7 @@ section.split.tiny {
             }
         }
         
-        & p {
+        p {
             margin-block: 0;
             text-align: center;
             text-wrap: balance;
