--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/hero.astro'
+import '../styles/pages/error.scss'
 ---
 <Layout title="404">
-  <Hero idName="content">
+  <Hero idName="content" classItems="error">
     <section>
       <div>
         <h1>404 Not Found</h1>
