--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -55,7 +55,7 @@ import '../styles/photos.scss'
             <p>We are currently working with Anita from Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.</p>
           </div>
           <div class="img-parent">
-            <img src="/assets/projects/vanniaid-foundation.png" alt="The Vanni Aid Image" />
+            <img src="/assets/projects/vanniaid-foundation.jpg" alt="The Vanni Aid Image" />
           </div>
         </TinySplit>
       </section>
