--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -28,7 +28,7 @@ import '../styles/photos.scss'
           <div>
             <p>They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.</p>
           </div>
-          <div>
+          <div class="img-parent">
             <img src="/assets/projects/treasurechest-foundation.png" alt="The Treasure Chest Foundation Image" />
           </div>
         </TinySplit>
