--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -54,7 +54,7 @@ import '../styles/photos.scss'
           <div>
             <p>We are currently working with Anita from Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.</p>
           </div>
-          <div class="img-parent">
+          <div class="img-parent large">
             <img src="/assets/projects/vanniaid-foundation.jpg" alt="The Vanni Aid Image" />
           </div>
         </TinySplit>
