--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -114,5 +114,6 @@ import '../styles/photos.scss'
       </section>
     </Split> -->
   </main>
+  <script is:inline src="/projects.js"></script>
   <script is:inline src="/modal.js"></script>
 </Layout>
