--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,5 +1,8 @@
 section#mission {
   & > section > div:not([hHr]):not(div.carousel) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: var(--padding);
   }
   
