--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ import '../styles/photos.scss'
       </section>
     </section>
   </main>
-  <script is:inline src="contact.js"></script>
-  <script is:inline src="modal.js"></script>
-  <script is:inline src="photos.js"></script>
+  <script is:inline src="/contact.js"></script>
+  <script is:inline src="/modal.js"></script>
+  <script is:inline src="/photos.js"></script>
 </Layout>
