--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,13 +4,15 @@ import Hero from '../components/hero.astro'
 import '../styles/pages/error.scss'
 ---
 <Layout title="404">
-  <Hero idName="content" classItems="error">
-    <section>
-      <div>
-        <h1>404 Not Found</h1>
-        <h2>Unfortunatly our website doen not have the page that you were looking for.</h1>
-        <h3>Either we never created this page to begin with or we have deleted it. Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>
-      </div>
-    </section>
-  </Hero>
+  <main id="content">
+    <Hero classItems="error">
+      <section>
+        <div>
+          <h1>404 Not Found</h1>
+          <h2>Unfortunatly our website doen not have the page that you were looking for.</h1>
+          <h3>Either we never created this page to begin with or we have deleted it. Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>
+        </div>
+      </section>
+    </Hero>
+  </main>
 </Layout>
